<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.power.mpgcalculator.MainActivity" >

    <TextView
        android:id="@+id/travelCostCalcTitle"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/travel_cost_calc_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/fordcrownvic"
        android:layout_width="267dp"
        android:layout_height="244dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:clickable="true"
        android:src="@drawable/crownvic" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1" >

        <TextView
            android:id="@+id/distanceMiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/distanceMilesEditText"
            android:text="@string/distance_miles_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/distanceMilesEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_miles_hint_string"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/distanceMilesDisplayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" >

        <TextView
            android:id="@+id/mpgTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpg_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/mpgSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="50"
            android:progress="25" />

    </LinearLayout>

    <LinearLayout
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3" >

        <TextView
            android:id="@+id/gasPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_price_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/gasPriceSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="4"
            android:progress="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4" >

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/costDisplayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</GridLayout>